--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
 			  var textLength = document.getElementById("inputLength").value;
 				textLength = 8.40;
 				var textWidth = document.getElementById("inputWidth").value;
-				textWidth = 4.60
+				textWidth = 4.60;
 				var textUnitValue = document.getElementById("inputUnitValue").value;
 				textUnitValue = 0.3436;
-				// console.log(textLength + ' ' + textWidth + ' ' + textUnitValue + ' ');
 				var feetUnitLengthCount = Math.round(textLength/textUnitValue);
 				var feetUnitWidthCount = Math.round(textWidth/textUnitValue);
 				console.log(feetUnitLengthCount);
@@ -72,6 +71,112 @@
 				var fractionFromFloat = calculateFractionFromFloat(roundedRatioLengthWidth);
 				console.log(roundedRatioLengthWidth);
 				console.log(fractionFromFloat);
+				var numberOfSquareByBuildingSide = calculateNumberOfSquareByBuildingSide(textLength, textWidth);
+				console.log('TODO : ' + numberOfSquareByBuildingSide); // TODO
+
+				var modulo1 = (feetUnitLengthCount / numberOfSquareByBuildingSide[0]).toFixed(1);
+				console.log(modulo1);
+
+				var modulo2 = (feetUnitWidthCount / numberOfSquareByBuildingSide[1]).toFixed(1);
+				console.log(modulo2);
+
+				console.log('BILAN : ');
+				console.log(feetUnitLengthCount + ' PAR ' + numberOfSquareByBuildingSide[0] + ' CASES');
+				console.log(' ET : ');
+				console.log(feetUnitWidthCount + ' PAR ' + numberOfSquareByBuildingSide[1] + ' CASES');
+				console.log('POUR UN MODULE DE : ' + modulo2 + ' PIEDS PAR CASE');
+			}
+
+			function calculateNumberOfSquareByBuildingSide(textLength, textWidth) {
+				var squareNumbersLengthArray = [];
+				var squareNumbersWidthArray = [];
+				var ratioLength = 1;
+				var ratioWidth = 1;
+
+				for (var i = 1; i <= 11; i++)
+				{
+					ratioLength = textLength/i;
+					ratioWidth = textWidth/i;
+					squareNumbersLengthArray.push(ratioLength);
+					squareNumbersWidthArray.push(ratioWidth);
+				}
+
+				var commonValues = [];
+				var hasAtLeastOneCommonValue = false;
+				var needAnotherTurn = false;
+				for (var j = 0; j < squareNumbersLengthArray.length; j++)
+				{
+						var currentElement = squareNumbersLengthArray[j].toFixed(2);
+						if (squareNumbersWidthArray.includes(currentElement))
+						{
+								hasAtLeastOneCommonValue = true;
+								commonValues.push(currentElement);
+								break;
+						}
+				}
+
+				if (hasAtLeastOneCommonValue == false)
+				{
+					needAnotherTurn = true;
+					var roundedSquareNumbersWidthArray = [];
+					var roundedSquareNumbersLengthArray = [];
+					var currentElementK = 0;
+					for (var k = 0; k < squareNumbersWidthArray.length; k++)
+					{
+							currentElementK = roundingTwoNumbersAfterComma(squareNumbersWidthArray[k]); // TODO
+							roundedSquareNumbersWidthArray.push(currentElementK);
+							console.log(currentElementK);
+					}
+					console.log('THIS : ' + roundedSquareNumbersWidthArray); // TODO
+
+					for (var kk = 0; kk < squareNumbersLengthArray.length; kk++)
+					{
+							var currentElementKk = roundingTwoNumbersAfterComma(squareNumbersLengthArray[kk]);  // TODO
+							roundedSquareNumbersLengthArray.push(currentElementKk);
+					}
+					console.log('THAT ' + roundedSquareNumbersLengthArray);  // TODO
+
+					for (var l = 0; l < squareNumbersLengthArray.length; l++)
+					{
+							var currentElementL = roundingTwoNumbersAfterComma(squareNumbersLengthArray[l]);
+							if (roundedSquareNumbersWidthArray.includes(currentElementL))
+							{
+									hasAtLeastOneCommonValue = true;
+									commonValues.push(currentElementL);
+									break;
+							}
+					}
+				}
+
+				var indexLength = 0;
+				var indexWidth = 0;
+
+				if (needAnotherTurn) {
+					indexLength = roundedSquareNumbersLengthArray.indexOf(commonValues);
+					indexWidth = roundedSquareNumbersWidthArray.indexOf(commonValues);
+				} else {
+					indexLength = squareNumbersLengthArray.indexOf(commonValues);
+					indexWidth = squareNumbersWidthArray.indexOf(commonValues);
+				}
+
+				if (indexLength == -1)
+				{
+					indexLength = i;
+				}
+				if (indexWidth == -1)
+				{
+					indexWidth = i
+				}
+
+				return [indexLength, indexWidth];
+			}
+
+			function roundingTwoNumbersAfterComma(currentNumber)
+			{
+				var strNumber = String(currentNumber).slice(0, 4)
+				return
+					Number(strNumber)
+				;
 			}
 
 			function calculateFractionFromFloat(ratioLengthWidth)
