--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
 		</br></br>
 		<button onclick="calculateModularity()">GENERER CALCUL MODULES</button>
 		</br></br>
-		<h2>Résultat :</h2> <span id="spanResult"><h3>...</h3></span>
+		<h2>Résultat :</h2> <span id="spanResult"><h3>...</h3></span></br></br>
+		<span id="summary"><h3></h3></span>
 
 		</br></br>
 		<h2> Remplir les champs ci-dessous avant de cliquer sur "GENERER CALCUL MODULES" :</h2>
 		<span id="spanSaisir"><h3>Référence principale :</h3></span>
 
-				Longueur édifice : <input type="text" id="inputLength" placeholder="8.40" size="100" title="Type in a length">
+				<span id="errorMessage" style="font-weight: bold;"><h3></h3></span></br>
+
+				Longueur édifice : <input type="text" id="inputLength" placeholder="8.40" size="100" title="Type in a length/height">
 				</br>
 				Largeur édifice : <input type="text" id="inputWidth" placeholder="4.60" size="100" title="Type in a width">
 				</br>
@@ -56,32 +59,60 @@
 			function calculateModularity()
 			{
 			  var textLength = document.getElementById("inputLength").value; // 8.40
+				textLength = 8.40;
 				var textWidth = document.getElementById("inputWidth").value; // 4.60
+				textWidth = 4.60;
 				var textUnitValue = document.getElementById("inputUnitValue").value;  // 0.3436;
+				textUnitValue = 0.3436;
 				var feetUnitLengthCount = Math.round(textLength/textUnitValue);
 				var feetUnitWidthCount = Math.round(textWidth/textUnitValue);
-				console.log(feetUnitLengthCount);
-				console.log(feetUnitWidthCount);
 
-				var ratioLengthWidth = textLength/textWidth;
-				var roundedRatioLengthWidth = ratioLengthWidth.toFixed(1);
-				var fractionFromFloat = calculateFractionFromFloat(roundedRatioLengthWidth);
-				console.log(roundedRatioLengthWidth);
-				console.log(fractionFromFloat);
-				var numberOfSquareByBuildingSide = calculateNumberOfSquareByBuildingSide(textLength, textWidth);
-				console.log('LENGTH & WIDTH NUMBER OF SQUARES : ' + numberOfSquareByBuildingSide); // TODO
+				if (!textLength || !textWidth || !textUnitValue)
+				{
+					writeErrorMessage("ATTENTION : Tous les champs doivent être remplis avant calcul");
+					writeResultMessage('');
+					writeSummaryMessage('');
+				} else {
+					writeErrorMessage('');
 
-				var modulo1 = (feetUnitLengthCount / numberOfSquareByBuildingSide[0]).toFixed(1);
-				console.log(modulo1);
+					var ratioLengthWidth = textLength/textWidth;
+					var roundedRatioLengthWidth = ratioLengthWidth.toFixed(1);
+					var fractionFromFloat = calculateFractionFromFloat(roundedRatioLengthWidth);
+					var numberOfSquareByBuildingSide = calculateNumberOfSquareByBuildingSide(textLength, textWidth);
 
-				var modulo2 = (feetUnitWidthCount / numberOfSquareByBuildingSide[1]).toFixed(1);
-				console.log(modulo2);
+					var modulo1 = (feetUnitLengthCount / numberOfSquareByBuildingSide[0]).toFixed(1);
+					var modulo2 = (feetUnitWidthCount / numberOfSquareByBuildingSide[1]).toFixed(1);
 
-				console.log('BILAN : ');
-				console.log(feetUnitLengthCount + ' PAR ' + numberOfSquareByBuildingSide[0] + ' CASES');
-				console.log(' ET : ');
-				console.log(feetUnitWidthCount + ' PAR ' + numberOfSquareByBuildingSide[1] + ' CASES');
-				console.log('POUR UN MODULE DE : ' + modulo1 + ' = ' + modulo2 + ' PIEDS PAR CASE');
+					writeResultMessage(
+						"Nombre de pieds / longueur = " + feetUnitLengthCount + " ; "
+					+ "Nombre de pieds / largeur = " + feetUnitWidthCount + " ; "
+					+ "Ratio arrondi (1 chiffre) longueur / largeur = " + roundedRatioLengthWidth + " ; "
+					+ "Fraction du ratio longueur / largeur = " + fractionFromFloat + " ; "
+					+ "Longueur et largeur nombre de cases de la grille = " + numberOfSquareByBuildingSide.join(" & ") + " ; "
+				  + "Valeur d'un module = " + modulo1 + " = " + modulo2 + " ; "
+					);
+
+					writeSummaryMessage(
+						"BILAN : " + feetUnitLengthCount + ' PIEDS pour ' + numberOfSquareByBuildingSide[0] + ' CASES '
+					+ "et : " + feetUnitWidthCount + ' PIEDS pour ' + numberOfSquareByBuildingSide[1] + ' CASES' + " ; "
+					+ "pour UN MODULE DE : " + modulo1 + ' = ' + modulo2 + ' PIEDS PAR CASE' + " ; "
+					);
+				}
+			}
+
+			function writeResultMessage(result)
+			{
+				document.getElementById("spanResult").textContent = result;
+			}
+
+			function writeSummaryMessage(summary)
+			{
+				document.getElementById("summary").textContent = summary;
+			}
+
+			function writeErrorMessage(errorMessage)
+			{
+				document.getElementById("errorMessage").textContent = errorMessage;
 			}
 
 			function calculateNumberOfSquareByBuildingSide(textLength, textWidth) {
