--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 				}
 
 				// table.appendChild(img_default_copy);
-				for (var n = 1; n < squares.length; n++) {
+				for (var n = 0; n <= squares.length; n++) {
 					table.appendChild(squares[n]);
 				}
 			}
