--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						"BILAN : "
 					+ feetUnitLengthCount + ' PIEDS pour ' + numberOfSquareByBuildingSide[0] + ' CASES (LONGUEUR) '
 					+ "et : " + feetUnitWidthCount + ' PIEDS pour ' + numberOfSquareByBuildingSide[1] + ' CASES (LARGEUR)' + " ; "
-					+ "pour UN MODULE DE : " + modulo1 + ' (LONGUEUR) = ' + modulo2 + ' (LARGEUR) PIEDS ( ' + modulo1*textUnitValue + ' / ' + modulo2*textUnitValue + ' cm) PAR CASE' + " ; "
+					+ "pour UN MODULE DE : " + modulo1 + ' (LONGUEUR) = ' + modulo2 + ' (LARGEUR) PIEDS ( ' + modulo1*textUnitValue + ' / ' + modulo2*textUnitValue + ' m) PAR CASE' + " ; "
 					);
 
 					createGridModulo(numberOfSquareByBuildingSide[0], numberOfSquareByBuildingSide[1]);
