--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 																		<option value="2">2</option>
 																		<option value="4">4</option>
 																		<option value="6">6</option>
+																		<option value="8">8</option>
+																		<option value="10">10</option>
 																	</select>
 				</br>
 
