--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
 				} else if (textWidth > textLength)
 				{
 					writeErrorMessage("ATTENTION : La longueur doit être supérieure à la largeur");
+					writeResultMessage('');
+					writeDetailCalculation('');
+					writeMoreDetailCalculationLength(false);
+					writeMoreDetailCalculationWidth(false);
+					writeSummaryMessage('');
 				} else {
 					writeErrorMessage('');
 
